--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,9 @@
 @import './base.css';
 
 #app {
-
+  max-width: auto;
+  margin: 0 auto;
+  padding: 2rem;
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -20,6 +22,7 @@ a,
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
+  height: 50px;
   background-color: #333;
 }
 
